--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "date-fns": "^1.29.0",
     "history": "^4.7.2",
     "material-design-icons": "^3.0.1",
